# lib-cpp-geometria

./: CMakeLists.txt  README.md  geometria.cpp  geometria.h  libCPP_Geometria_global.h
